--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#2b1349</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="transparent">#53404040</color>
+    <color name="degenerate">#2b1349</color>
 </resources>
